--- a/index.html
+++ b/index.html
@@ -51,42 +51,54 @@
     <main>
       <!-- Hero -->
       <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <div class="container">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="button-hero" type="button">Замовити послугу</button>
+        </div>
       </section>
 
       <!-- секция ода себе -->
       <section class="feature">
-        <h2 class="visually-hidden">Чим ми кращі</h2>
-        <ul class="feature-list">
-          <li class="feature-item">
-            <h3 class="feature-title">Увага до деталей</h3>
-            <p>
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3 class="feature-title">Пунктуальність</h3>
-            <p>
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3 class="feature-title">Планування</h3>
-            <p>
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3 class="feature-title">Сучасні технології</h3>
-            <p>
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Особливості</h2>
+          <ul class="feature-list">
+            <li class="feature-item">
+              <div class="feature-img">
+                <img
+                  src="./images/antenna.svg"
+                  alt="увага до деталей"
+                  width="70px"
+                  height="70px"
+                />
+              </div>
+              <h3 class="feature-title">Увага до деталей</h3>
+              <p>
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-title">Пунктуальність</h3>
+              <p>
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-title">Планування</h3>
+              <p>
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-title">Сучасні технології</h3>
+              <p>
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- секция чем занимаемся -->
       <section class="work">
