--- a/portfolio.html
+++ b/portfolio.html
@@ -49,147 +49,247 @@
 
     <main>
       <section class="portfolio">
-        <h1 class="visually-hidden">Portfolio</h1>
-        <ul class="radio">
-          <li><button class="radio-button" type="button">Усі</button></li>
-          <li><button class="radio-button" type="button">Веб-сайти</button></li>
-          <li><button class="radio-button" type="button">Додатки</button></li>
-          <li><button class="radio-button" type="button">Дизайн</button></li>
-          <li><button class="radio-button" type="button">Маркетинг</button></li>
-        </ul>
-        <ul class="examples">
-          <li>
-            <a href="#">
-              <img
-                src="./images/tehnokriak.jpg"
-                alt="сайт"
-                width="370"
-                height="294"
-              />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img
-                src="./images/golden-star.jpg"
-                alt="гра двох гравців в баскетболл"
-                width="370"
-                height="294"
-              />
-              <h2 lang="en">Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img
-                src="./images/see-food.jpg"
-                alt="ресторан лого"
-                width="370"
-                height="294"
-              />
-              <h2>Ресторан <span lang="en">Seafood</span></h2>
-              <p>Додаток</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img
-                src="./images/prime.jpg"
-                alt="навушники"
-                width="370"
-                height="294"
-              />
-              <h2>Проєкт <span lang="en">Prime</span></h2>
-              <p>Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img
-                src="./images/boxes.jpg"
-                alt="два коробки"
-                width="370"
-                height="294"
-              />
-              <h2>Проєкт <span lang="en">Boxes</span></h2>
-              <p>Додаток</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img
-                src="./images/inspiration.jpg"
-                alt="зображення з монітору"
-                width="370"
-                height="294"
-              />
-              <h2 lang="en">Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img
-                src="./images/limited.jpg"
-                alt="оберт журналу"
-                width="370"
-                height="294"
-              />
-              <h2>Видання <span lang="en">Limited Edition</span></h2>
-              <p>Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img
-                src="./images/lab.jpg"
-                alt="логотип"
-                width="370"
-                height="294"
-              />
-              <h2>Проєкт <span lang="en">LAB</span></h2>
-              <p>Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img
-                src="./images/growing.jpg"
-                alt="людина заходить на сайт проекту"
-                width="370"
-                height="294"
-              />
-              <h2 lang="en">Growing Business</h2>
-              <p>Додаток</p>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="visually-hidden">Portfolio</h1>
+          <ul class="radio">
+            <li><button class="radio-button" type="button">Усі</button></li>
+            <li>
+              <button class="radio-button" type="button">Веб-сайти</button>
+            </li>
+            <li><button class="radio-button" type="button">Додатки</button></li>
+            <li><button class="radio-button" type="button">Дизайн</button></li>
+            <li>
+              <button class="radio-button" type="button">Маркетинг</button>
+            </li>
+          </ul>
+          <ul class="examples">
+            <li>
+              <a href="#">
+                <img
+                  src="./images/tehnokriak.jpg"
+                  alt="сайт"
+                  width="370"
+                  height="294"
+                />
+                <h2>Технокряк</h2>
+                <p>Веб-сайт</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="./images/golden-star.jpg"
+                  alt="гра двох гравців в баскетболл"
+                  width="370"
+                  height="294"
+                />
+                <h2 lang="en">Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="./images/see-food.jpg"
+                  alt="ресторан лого"
+                  width="370"
+                  height="294"
+                />
+                <h2>Ресторан <span lang="en">Seafood</span></h2>
+                <p>Додаток</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="./images/prime.jpg"
+                  alt="навушники"
+                  width="370"
+                  height="294"
+                />
+                <h2>Проєкт <span lang="en">Prime</span></h2>
+                <p>Маркетинг</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="./images/boxes.jpg"
+                  alt="два коробки"
+                  width="370"
+                  height="294"
+                />
+                <h2>Проєкт <span lang="en">Boxes</span></h2>
+                <p>Додаток</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="./images/inspiration.jpg"
+                  alt="зображення з монітору"
+                  width="370"
+                  height="294"
+                />
+                <h2 lang="en">Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="./images/limited.jpg"
+                  alt="оберт журналу"
+                  width="370"
+                  height="294"
+                />
+                <h2>Видання <span lang="en">Limited Edition</span></h2>
+                <p>Дизайн</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="./images/lab.jpg"
+                  alt="логотип"
+                  width="370"
+                  height="294"
+                />
+                <h2>Проєкт <span lang="en">LAB</span></h2>
+                <p>Маркетинг</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="./images/growing.jpg"
+                  alt="людина заходить на сайт проекту"
+                  width="370"
+                  height="294"
+                />
+                <h2 lang="en">Growing Business</h2>
+                <p>Додаток</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- подвал -->
     <footer>
-      <a class="logo-a" href="./index.html" lang="en"
-        ><span class="logo-span">Web</span>studio</a
-      >
-      <address>
-        <ul class="adress-list">
-          <li class="adress-first">м. Київ, пр-т Лесі Українки, 26</li>
-          <li>
-            <a class="adress-link" href="mailto:info@devstudio.com" lang="en"
-              >info@devstudio.com</a
+      <div class="container">
+        <div class="footer-contacts">
+          <div class="logo">
+            <a class="logo-a footer-logo" href="./index.html" lang="en"
+              ><span class="logo-span">Web</span>studio</a
             >
-          </li>
-          <li>
-            <a class="adress-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+          </div>
+          <address>
+            <ul class="adress-list">
+              <li class="adress-first">м. Київ, пр-т Лесі Українки, 26</li>
+              <li>
+                <a
+                  class="adress-link"
+                  href="mailto:info@devstudio.com"
+                  lang="en"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="adress-link" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <p>Приєднуйтесь</p>
+          <ul class="footer-social-list">
+            <li>
+              <div class="footer-img">
+                <a
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  rel="noopener nofollow noreferrer"
+                >
+                  <img
+                    src="./images/instagram2.svg"
+                    alt="instagram"
+                    width="20px"
+                    height="20px"
+                  />
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="footer-img">
+                <a
+                  href="https://twitter.com/i/flow/login"
+                  target="_blank"
+                  rel="noopener nofollow noreferrer"
+                >
+                  <img
+                    src="./images/twitter2.svg"
+                    alt="instagram"
+                    width="20px"
+                    height="20px"
+                  />
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="footer-img">
+                <a
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                  rel="noopener nofollow noreferrer"
+                >
+                  <img
+                    src="./images/facebook2.svg"
+                    alt="instagram"
+                    width="20px"
+                    height="20px"
+                  />
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="footer-img">
+                <a
+                  href="https://www.linkedin.com/"
+                  target="_blank"
+                  rel="noopener nofollow noreferrer"
+                >
+                  <img
+                    src="./images/linkedin2.svg"
+                    alt="instagram"
+                    width="20px"
+                    height="20px"
+                  />
+                </a>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-subscribe">
+          <p>Підпишіться на розсилку</p>
+          <form action="" method="get" name="email">
+            <div class="subscribe-box">
+              <input type="email" placeholder="E-mail" required />
+              <button>
+                Підписатися
+                <img
+                  src="./images/icon_send.svg"
+                  alt="icon_send"
+                  class="icon_send"
+                />
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
